--- a/style.css
+++ b/style.css
@@ -24,19 +24,37 @@
     width: 60%;
     justify-content: center;
     display: flex;
-    border: 2px solid #13196d;
+    border: 2px solid #24264d;
     border-radius: 35px;
     margin: auto;
     display: block;
+}
+
+.normal{
+    margin-top: 30px;
+    color: #000000;
+    padding: 1px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+.escuela{
+    margin-top: 30px;
+    color: #000000;
+    padding: 1px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
 }
 
 .footer{
     margin-top: 30px;
     color: #000000;
     background-color: #a8a2a2;
-    padding: 20px;
+    padding: 1px;
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 400;
 }
